fix: in ourmusic.html: add word-wrap to video-title to make title break at small viewports.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -476,6 +476,7 @@ small, .special {
 .audio-title, .video-title {
     font-size: 20px;
     font-style: italic;
+    word-wrap: break-word;
 }
 
 .audio-player:active {
